first pass of libxo-ifying. All error/warning messages and all output from -L except -L -v is now libxo'ified

--- a/workdir/iscsictl/Makefile
+++ b/workdir/iscsictl/Makefile
@@ -3,10 +3,15 @@
 PROG=		iscsictl
 SRCS=		iscsictl.c periphs.c parse.y token.l y.tab.h
 CFLAGS+=	-I${.CURDIR}
-CFLAGS+=	-I${.CURDIR}/../../sys/dev/iscsi
+# TEMPORARY:
+CFLAGS+=   -I/usr/src/sys/dev/iscsi
+CFLAGS+=   -g
+# Original:
+#CFLAGS+=	-I${.CURDIR}/../../sys/dev/iscsi
 MAN=		iscsi.conf.5 iscsictl.8
 
 LIBADD=		cam util
+LDADD=      -lxo
 
 YFLAGS+=	-v
 LFLAGS+=	-i
