Cleaned up iscsictl makefile Updated patch to latest submitted patch (PR#198396 https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=198396)

--- a/workdir/iscsictl/Makefile
+++ b/workdir/iscsictl/Makefile
@@ -3,15 +3,11 @@
 PROG=		iscsictl
 SRCS=		iscsictl.c periphs.c parse.y token.l y.tab.h
 CFLAGS+=	-I${.CURDIR}
-# TEMPORARY:
-CFLAGS+=   -I/usr/src/sys/dev/iscsi
-CFLAGS+=   -g
-# Original:
-#CFLAGS+=	-I${.CURDIR}/../../sys/dev/iscsi
+CFLAGS+=	-I${.CURDIR}/../../sys/dev/iscsi
 MAN=		iscsi.conf.5 iscsictl.8
 
 LIBADD=		cam util
-LDADD=      -lxo
+LDADD=		-lxo
 
 YFLAGS+=	-v
 LFLAGS+=	-i
